--- a/renderer.kv
+++ b/renderer.kv
@@ -29,10 +29,14 @@
                 width: 90
                 ActionButton:
                     text: 'Mandelbrot'
+                    on_press: root.renderer.changeFractal('mandelbrot')
                 ActionButton:
                     text: 'Julia'
+                    on_press: root.renderer.changeFractal('julia')
                 ActionButton:
                     text: 'Cactus'
+                    on_press: root.renderer.changeFractal('cactus')
                 ActionButton:
                     text: 'Gradient'
-    #RendererWidget
+                    on_press: root.renderer.changeFractal('gradient')
+        #RendererWidget
