--- a/renderer.kv
+++ b/renderer.kv
@@ -39,4 +39,11 @@
                 ActionButton:
                     text: 'Gradient'
                     on_press: root.renderer.changeFractal('gradient')
-        #RendererWidget
+            ActionGroup:
+                text: 'Color'
+                mode: 'spinner'
+                size_hint_x: None
+                width: 90
+                ActionButton:
+                    text: 'Greyscale'
+                    on_press: root.renderer.changeColor("greyscale")
