Added color selection

--- a/renderer.kv
+++ b/renderer.kv
@@ -47,3 +47,6 @@
                 ActionButton:
                     text: 'Greyscale'
                     on_press: root.renderer.changeColor("greyscale")
+                ActionButton:
+                    text: 'Golden'
+                    on_press: root.renderer.changeColor("golden")
