Added touch controls for zooming and moving the fractal

--- a/renderer.kv
+++ b/renderer.kv
@@ -1,6 +1,7 @@
 <RootWidget>:
 	ActionBar:
 		pos_hint: {'top':1}
+        important: True
         ActionView:
             use_separator: True
             ActionPrevious:
