Added horizon color scheme

--- a/renderer.kv
+++ b/renderer.kv
@@ -51,3 +51,6 @@
                 ActionButton:
                     text: 'Golden'
                     on_press: root.renderer.changeColor("golden")
+                ActionButton:
+                    text: 'Horizon'
+                    on_press: root.renderer.changeColor("horizon")
