Added incandescent color ramp

--- a/renderer.kv
+++ b/renderer.kv
@@ -54,3 +54,6 @@
                 ActionButton:
                     text: 'Horizon'
                     on_press: root.renderer.changeColor("horizon")
+                ActionButton:
+                    text: 'Incandescent'
+                    on_press: root.renderer.changeColor("incandescent")
