Changed scanline renderer label

--- a/renderer.kv
+++ b/renderer.kv
@@ -63,7 +63,7 @@
                     on_press: root.renderer.changeFractal('gradient')
                     group: 'fractal'
                 ActionToggleButton:
-                    text: 'Mandel (Full)'
+                    text: 'Scanline'
                     on_press: root.renderer.changeFractal('fullmandel')
                     group: 'fractal'
             ActionGroup:
