--- a/renderer.kv
+++ b/renderer.kv
@@ -1,29 +1,39 @@
 <RootWidget>:
-    StackLayout:
+    BoxLayout:
         pos_hint: {'right':1, 'top':.9}
         important: True
-        orientation: 'lr-tb'
-        size_hint: (.3, 1)
+        size_hint: (.3, .5)
+        orientation: 'vertical'
         Button:
             text: 'Test'
             on_press: root.renderer.changeColor("golden")
             width: 80
-            size_hint: (None, 0.05)
+            size_hint: (1, 0.004)
         Button:
             text: 'Test2'
             on_press: root.renderer.changeColor("golden")
             width: 80
-            size_hint: (None, 0.05)
-        Label:
-            text: 'Ramp Strength'
+            size_hint: (1, 0.004)
+        Button:
+            text: 'Test3'
+            on_press: root.renderer.changeColor("golden")
             width: 80
-            size_hint: (None, 0.05)
-        Slider:
-            min: .4
-            max: 3
-            value: 1.5
+            size_hint: (1, 0.004)
+        BoxLayout:
+            important: True
             width: 80
-            size_hint: (None, 0.05)
+            size_hint: (1, 0.004)
+            Label:
+                text: 'Color Ramp Strength'
+                width: 80
+                size_hint: (0.1, None)
+            Slider:
+                min: 1
+                max: 3
+                value: 1.732
+                width: 80
+                size_hint: (0.1, None)
+                on_touch_up: root.renderer.changeRamp(self.value)
 	ActionBar:
 		pos_hint: {'top':1}
         important: True
