Fixed color mode button group bug

--- a/renderer.kv
+++ b/renderer.kv
@@ -136,13 +136,13 @@
                 ActionToggleButton:
                     text: 'RGB'
                     on_press: root.renderer.changeColorMode(0)
-                    group: 'color'
+                    group: 'colormode'
                     state: 'down'
                 ActionToggleButton:
                     text: 'GBR'
                     on_press: root.renderer.changeColorMode(1)
-                    group: 'color'
+                    group: 'colormode'
                 ActionToggleButton:
                     text: 'BRG'
                     on_press: root.renderer.changeColorMode(2)
-                    group: 'color'
+                    group: 'colormode'
