--- a/renderer.kv
+++ b/renderer.kv
@@ -18,8 +18,8 @@
                 width: 80
                 size_hint: (0.1, None)
             Slider:
-                min: 1
-                max: 3
+                min: .1
+                max: 10
                 value: 1.732
                 width: 80
                 size_hint: (0.1, None)
